--- a/src/app/components/Square/Square.module.scss
+++ b/src/app/components/Square/Square.module.scss
@@ -49,3 +49,15 @@
     background-color: red;
   }
 }
+
+.selected {
+  &::after {
+    border: 5px solid green;
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
